sql/src/main/java/org/daida/jdb/sql/parse/antlr/SqlParser.java
// Generated from E:/workspace/jdb/sql/src/main/resources\SqlParser.g4 by ANTLR 4.10.1
package org.daida.jdb.sql.parse.antlr;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class SqlParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.10.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		COLON=1, COMMA=2, DOT=3, EQ=4, GREATER_THAN=5, GREATER_THAN_OR_EQ=6, LESS_THAN=7, 
		LESS_THAN_OR_EQ=8, MINUS=9, NOT_EQ=10, PAREN_OPEN=11, PAREN_CLOSE=12, 
		PERCENT=13, PLUS=14, SEMI=15, SLASH=16, STAR=17, ADD=18, ALERT=19, ALL=20, 
		AND=21, AS=22, ASC=23, BEGIN=24, BETWEEN=25, BY=26, CASE=27, CAST=28, 
		CHECK=29, CLOSE=30, COLUMN=31, COMMIT=32, CONSTRAINT=33, CREATE=34, CROSS=35, 
		CURSOR=36, DATABASE=37, DESC=38, DECLARE=39, DEFAULT=40, DELETE=41, DISTINCT=42, 
		DROP=43, ELSE=44, END=45, EXCEPT=46, EXEC=47, EXECUTE=48, EXIST=49, FALSE=50, 
		FETCH=51, FIRST=52, FOR=53, FOREIGN=54, FROM=55, FULL=56, FUNCTION=57, 
		GRANT=58, GROUP=59, HAVING=60, KEY=61, IF=62, IN=63, INDEX=64, INNER=65, 
		INSERT=66, INSTEAD=67, INTERSECT=68, INOUT=69, INTO=70, IS=71, JOIN=72, 
		LEFT=73, LIKE=74, LOCK=75, LOOP=76, MATCHED=77, MERGE=78, NATURAL=79, 
		NEXT=80, NOT=81, NULL=82, OF=83, OFFSET=84, ON=85, ONLY=86, OR=87, ORDER=88, 
		OUT=89, OUTER=90, PRIMARY=91, PROCEDURE=92, REFERENCES=93, RENAME=94, 
		RETURN=95, REVOKE=96, RIGHT=97, ROLE=98, ROLLBACK=99, ROW=100, ROWS=101, 
		SAVE=102, SCHEMA=103, SELECT=104, SET=105, TABLE=106, THEN=107, TO=108, 
		TRANSACTION=109, TRIGGER=110, TRUE=111, TRUNCATE=112, UNION=113, UNIQUE=114, 
		UPDATE=115, USE=116, USER=117, USING=118, VALUES=119, VIEW=120, WHEN=121, 
		WHERE=122, WHILE=123, WITH=124, BlockComment=125, LineComment=126, Newline=127, 
		Whitespace=128, DigitsLiteral=129, NumericLiteral=130, IdentiferLiteral=131, 
		StringLiteral=132;
	public static final int
		RULE_prog = 0, RULE_stmt = 1, RULE_createTableStmt = 2, RULE_deleteStmt = 3, 
		RULE_insertStmt = 4, RULE_selectStmt = 5, RULE_truncateStmt = 6, RULE_updateStmt = 7, 
		RULE_columnClause = 8, RULE_cstrClause = 9, RULE_cstrFkClause = 10, RULE_cstrPkClause = 11, 
		RULE_fkClause = 12, RULE_fromClause = 13, RULE_joinClause = 14, RULE_pkClause = 15, 
		RULE_referencesClause = 16, RULE_selectClause = 17, RULE_whereClause = 18, 
		RULE_columnItem = 19, RULE_fromItem = 20, RULE_selectItem = 21, RULE_whereItem = 22, 
		RULE_expr = 23, RULE_idExpr = 24, RULE_idChainExpr = 25, RULE_setExpr = 26, 
		RULE_valueLiteral = 27, RULE_digits = 28;
	private static String[] makeRuleNames() {
		return new String[] {
			"prog", "stmt", "createTableStmt", "deleteStmt", "insertStmt", "selectStmt", 
			"truncateStmt", "updateStmt", "columnClause", "cstrClause", "cstrFkClause", 
			"cstrPkClause", "fkClause", "fromClause", "joinClause", "pkClause", "referencesClause", 
			"selectClause", "whereClause", "columnItem", "fromItem", "selectItem", 
			"whereItem", "expr", "idExpr", "idChainExpr", "setExpr", "valueLiteral", 
			"digits"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "':'", "','", "'.'", "'='", "'>'", "'>='", "'<'", "'<='", "'-'", 
			"'<>'", "'('", "')'", "'%'", "'+'", "';'", "'/'", "'*'", "'ADD'", "'ALERT'", 
			"'ALL'", "'AND'", "'AS'", "'ASC'", "'BEGIN'", "'BETWEEN'", "'BY'", "'CASE'", 
			"'CAST'", "'CHECK'", "'CLOSE'", "'COLUMN'", "'COMMIT'", "'CONSTRAINT'", 
			"'CREATE'", "'CROSS'", "'CURSOR'", "'DATABASE'", "'DESC'", "'DECLARE'", 
			"'DEFAULT'", "'DELETE'", "'DISTINCT'", "'DROP'", "'ELSE'", "'END'", "'EXCEPT'", 
			"'EXEC'", "'EXECUTE'", "'EXIST'", "'FALSE'", "'FETCH'", "'FIRST'", "'FOR'", 
			"'FOREIGN'", "'FROM'", "'FULL'", "'FUNCTION'", "'GRANT'", "'GROUP'", 
			"'HAVING'", "'KEY'", "'IF'", "'IN'", "'INDEX'", "'INNER'", "'INSERT'", 
			"'INSTEAD'", "'INTERSECT'", "'INOUT'", "'INTO'", "'IS'", "'JOIN'", "'LEFT'", 
			"'LIKE'", "'LOCK'", "'LOOP'", "'MATCHED'", "'MERGE'", "'NATURAL'", "'NEXT'", 
			"'NOT'", "'NULL'", "'OF'", "'OFFSET'", "'ON'", "'ONLY'", "'OR'", "'ORDER'", 
			"'OUT'", "'OUTER'", "'PRIMARY'", "'PROCEDURE'", "'REFERENCES'", "'RENAME'", 
			"'RETURN'", "'REVOKE'", "'RIGHT'", "'ROLE'", "'ROLLBACK'", "'ROW'", "'ROWS'", 
			"'SAVE'", "'SCHEMA'", "'SELECT'", "'SET'", "'TABLE'", "'THEN'", "'TO'", 
			"'TRANSACTION'", "'TRIGGER'", "'TRUE'", "'TRUNCATE'", "'UNION'", "'UNIQUE'", 
			"'UPDATE'", "'USE'", "'USER'", "'USING'", "'VALUES'", "'VIEW'", "'WHEN'", 
			"'WHERE'", "'WHILE'", "'WITH'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "COLON", "COMMA", "DOT", "EQ", "GREATER_THAN", "GREATER_THAN_OR_EQ", 
			"LESS_THAN", "LESS_THAN_OR_EQ", "MINUS", "NOT_EQ", "PAREN_OPEN", "PAREN_CLOSE", 
			"PERCENT", "PLUS", "SEMI", "SLASH", "STAR", "ADD", "ALERT", "ALL", "AND", 
			"AS", "ASC", "BEGIN", "BETWEEN", "BY", "CASE", "CAST", "CHECK", "CLOSE", 
			"COLUMN", "COMMIT", "CONSTRAINT", "CREATE", "CROSS", "CURSOR", "DATABASE", 
			"DESC", "DECLARE", "DEFAULT", "DELETE", "DISTINCT", "DROP", "ELSE", "END", 
			"EXCEPT", "EXEC", "EXECUTE", "EXIST", "FALSE", "FETCH", "FIRST", "FOR", 
			"FOREIGN", "FROM", "FULL", "FUNCTION", "GRANT", "GROUP", "HAVING", "KEY", 
			"IF", "IN", "INDEX", "INNER", "INSERT", "INSTEAD", "INTERSECT", "INOUT", 
			"INTO", "IS", "JOIN", "LEFT", "LIKE", "LOCK", "LOOP", "MATCHED", "MERGE", 
			"NATURAL", "NEXT", "NOT", "NULL", "OF", "OFFSET", "ON", "ONLY", "OR", 
			"ORDER", "OUT", "OUTER", "PRIMARY", "PROCEDURE", "REFERENCES", "RENAME", 
			"RETURN", "REVOKE", "RIGHT", "ROLE", "ROLLBACK", "ROW", "ROWS", "SAVE", 
			"SCHEMA", "SELECT", "SET", "TABLE", "THEN", "TO", "TRANSACTION", "TRIGGER", 
			"TRUE", "TRUNCATE", "UNION", "UNIQUE", "UPDATE", "USE", "USER", "USING", 
			"VALUES", "VIEW", "WHEN", "WHERE", "WHILE", "WITH", "BlockComment", "LineComment", 
			"Newline", "Whitespace", "DigitsLiteral", "NumericLiteral", "IdentiferLiteral", 
			"StringLiteral"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "SqlParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public SqlParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ProgContext extends ParserRuleContext {
		public List<StmtContext> stmt() {
			return getRuleContexts(StmtContext.class);
		}
		public StmtContext stmt(int i) {
			return getRuleContext(StmtContext.class,i);
		}
		public List<TerminalNode> SEMI() { return getTokens(SqlParser.SEMI); }
		public TerminalNode SEMI(int i) {
			return getToken(SqlParser.SEMI, i);
		}
		public TerminalNode EOF() { return getToken(SqlParser.EOF, 0); }
		public ProgContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_prog; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SqlParserListener ) ((SqlParserListener)listener).enterProg(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SqlParserListener ) ((SqlParserListener)listener).exitProg(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SqlParserVisitor ) return ((SqlParserVisitor<? extends T>)visitor).visitProg(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgContext prog() throws RecognitionException {
		ProgContext _localctx = new ProgContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_prog);
		int _la;
		try {
			setState(73);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(58);
				stmt();
				setState(59);
				match(SEMI);
				setState(65);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==CREATE || _la==DELETE || ((((_la - 66)) & ~0x3f) == 0 && ((1L << (_la - 66)) & ((1L << (INSERT - 66)) | (1L << (SELECT - 66)) | (1L << (TRUNCATE - 66)) | (1L << (UPDATE - 66)))) != 0)) {
					{
					{
					setState(60);
					stmt();
					setState(61);
					match(SEMI);
					}
					}
					setState(67);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(68);
				match(EOF);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(70);
				stmt();
				setState(71);
				match(EOF);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StmtContext extends ParserRuleContext {
		public CreateTableStmtContext createTableStmt() {
			return getRuleContext(CreateTableStmtContext.class,0);
		}
		public DeleteStmtContext deleteStmt() {
			return getRuleContext(DeleteStmtContext.class,0);
		}
		public InsertStmtContext insertStmt() {
			return getRuleContext(InsertStmtContext.class,0);
		}
		public SelectStmtContext selectStmt() {
			return getRuleContext(SelectStmtContext.class,0);
		}
		public TruncateStmtContext truncateStmt() {
			return getRuleContext(TruncateStmtContext.class,0);
		}
		public UpdateStmtContext updateStmt() {
			return getRuleContext(UpdateStmtContext.class,0);
		}
		public StmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_stmt; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SqlParserListener ) ((SqlParserListener)listener).enterStmt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SqlParserListener ) ((SqlParserListener)listener).exitStmt(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SqlParserVisitor ) return ((SqlParserVisitor<? extends T>)visitor).visitStmt(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StmtContext stmt() throws RecognitionException {
		StmtContext _localctx = new StmtContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_stmt);
		try {
			setState(81);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case CREATE:
				enterOuterAlt(_localctx, 1);
				{
				setState(75);
				createTableStmt();
				}
				break;
			case DELETE:
				enterOuterAlt(_localctx, 2);
				{
				setState(76);
				deleteStmt();
				}
				break;
			case INSERT:
				enterOuterAlt(_localctx, 3);
				{
				setState(77);
				insertStmt();
				}
				break;
			case SELECT:
				enterOuterAlt(_localctx, 4);
				{
				setState(78);
				selectStmt();
				}
				break;
			case TRUNCATE:
				enterOuterAlt(_localctx, 5);
				{
				setState(79);
				truncateStmt();
				}
				break;
			case UPDATE:
				enterOuterAlt(_localctx, 6);
				{
				setState(80);
				updateStmt();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CreateTableStmtContext extends ParserRuleContext {
		public TerminalNode CREATE() { return getToken(SqlParser.CREATE, 0); }
		public IdExprContext idExpr() {
			return getRuleContext(IdExprContext.class,0);
		}
		public TerminalNode PAREN_OPEN() { return getToken(SqlParser.PAREN_OPEN, 0); }
		public List<ColumnClauseContext> columnClause() {
			return getRuleContexts(ColumnClauseContext.class);
		}
		public ColumnClauseContext columnClause(int i) {
			return getRuleContext(ColumnClauseContext.class,i);
		}
		public TerminalNode PAREN_CLOSE() { return getToken(SqlParser.PAREN_CLOSE, 0); }
		public List<TerminalNode> COMMA() { return getTokens(SqlParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(SqlParser.COMMA, i);
		}
		public CstrPkClauseContext cstrPkClause() {
			return getRuleContext(CstrPkClauseContext.class,0);
		}
		public List<CstrFkClauseContext> cstrFkClause() {
			return getRuleContexts(CstrFkClauseContext.class);
		}
		public CstrFkClauseContext cstrFkClause(int i) {
			return getRuleContext(CstrFkClauseContext.class,i);
		}
		public CreateTableStmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_createTableStmt; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SqlParserListener ) ((SqlParserListener)listener).enterCreateTableStmt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SqlParserListener ) ((SqlParserListener)listener).exitCreateTableStmt(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SqlParserVisitor ) return ((SqlParserVisitor<? extends T>)visitor).visitCreateTableStmt(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CreateTableStmtContext createTableStmt() throws RecognitionException {
		CreateTableStmtContext _localctx = new CreateTableStmtContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_createTableStmt);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(83);
			match(CREATE);
			setState(84);
			idExpr();
			setState(85);
			match(PAREN_OPEN);
			setState(86);
			columnClause();
			setState(91);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,3,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(87);
					match(COMMA);
					setState(88);
					columnClause();
					}
					} 
				}
				setState(93);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,3,_ctx);
			}
			setState(96);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
			case 1:
				{
				setState(94);
				match(COMMA);
				setState(95);
				cstrPkClause();
				}
				break;
			}
			setState(102);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMMA) {
				{
				{
				setState(98);
				match(COMMA);
				setState(99);
				cstrFkClause();
				}
				}
				setState(104);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(105);
			match(PAREN_CLOSE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DeleteStmtContext extends ParserRuleContext {
		public TerminalNode DELETE() { return getToken(SqlParser.DELETE, 0); }
		public FromClauseContext fromClause() {
			return getRuleContext(FromClauseContext.class,0);
		}
		public WhereClauseContext whereClause() {
			return getRuleContext(WhereClauseContext.class,0);
		}
		public DeleteStmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_deleteStmt; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SqlParserListener ) ((SqlParserListener)listener).enterDeleteStmt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SqlParserListener ) ((SqlParserListener)listener).exitDeleteStmt(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SqlParserVisitor ) return ((SqlParserVisitor<? extends T>)visitor).visitDeleteStmt(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DeleteStmtContext deleteStmt() throws RecognitionException {
		DeleteStmtContext _localctx = new DeleteStmtContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_deleteStmt);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(107);
			match(DELETE);
			setState(108);
			fromClause();
			setState(110);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==WHERE) {
				{
				setState(109);
				whereClause();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class InsertStmtContext extends ParserRuleContext {
		public TerminalNode INSERT() { return getToken(SqlParser.INSERT, 0); }
		public TerminalNode INTO() { return getToken(SqlParser.INTO, 0); }
		public IdExprContext idExpr() {
			return getRuleContext(IdExprContext.class,0);
		}
		public List<TerminalNode> PAREN_OPEN() { return getTokens(SqlParser.PAREN_OPEN); }
		public TerminalNode PAREN_OPEN(int i) {
			return getToken(SqlParser.PAREN_OPEN, i);
		}
		public List<ColumnItemContext> columnItem() {
			return getRuleContexts(ColumnItemContext.class);
		}
		public ColumnItemContext columnItem(int i) {
			return getRuleContext(ColumnItemContext.class,i);
		}
		public List<TerminalNode> PAREN_CLOSE() { return getTokens(SqlParser.PAREN_CLOSE); }
		public TerminalNode PAREN_CLOSE(int i) {
			return getToken(SqlParser.PAREN_CLOSE, i);
		}
		public TerminalNode VALUES() { return getToken(SqlParser.VALUES, 0); }
		public List<ValueLiteralContext> valueLiteral() {
			return getRuleContexts(ValueLiteralContext.class);
		}
		public ValueLiteralContext valueLiteral(int i) {
			return getRuleContext(ValueLiteralContext.class,i);
		}
		public List<TerminalNode> COMMA() { return getTokens(SqlParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(SqlParser.COMMA, i);
		}
		public InsertStmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_insertStmt; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SqlParserListener ) ((SqlParserListener)listener).enterInsertStmt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SqlParserListener ) ((SqlParserListener)listener).exitInsertStmt(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SqlParserVisitor ) return ((SqlParserVisitor<? extends T>)visitor).visitInsertStmt(this);
			else return visitor.visitChildren(this);
		}
	}

	public final InsertStmtContext insertStmt() throws RecognitionException {
		InsertStmtContext _localctx = new InsertStmtContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_insertStmt);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(112);
			match(INSERT);
			setState(113);
			match(INTO);
			setState(114);
			idExpr();
			setState(115);
			match(PAREN_OPEN);
			setState(116);
			columnItem();
			setState(121);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMMA) {
				{
				{
				setState(117);
				match(COMMA);
				setState(118);
				columnItem();
				}
				}
				setState(123);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(124);
			match(PAREN_CLOSE);
			setState(125);
			match(VALUES);
			setState(126);
			match(PAREN_OPEN);
			setState(127);
			valueLiteral();
			setState(132);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMMA) {
				{
				{
				setState(128);
				match(COMMA);
				setState(129);
				valueLiteral();
				}
				}
				setState(134);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(135);
			match(PAREN_CLOSE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SelectStmtContext extends ParserRuleContext {
		public SelectClauseContext selectClause() {
			return getRuleContext(SelectClauseContext.class,0);
		}
		public FromClauseContext fromClause() {
			return getRuleContext(FromClauseContext.class,0);
		}
		public WhereClauseContext whereClause() {
			return getRuleContext(WhereClauseContext.class,0);
		}
		public SelectStmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_selectStmt; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SqlParserListener ) ((SqlParserListener)listener).enterSelectStmt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SqlParserListener ) ((SqlParserListener)listener).exitSelectStmt(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SqlParserVisitor ) return ((SqlParserVisitor<? extends T>)visitor).visitSelectStmt(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SelectStmtContext selectStmt() throws RecognitionException {
		SelectStmtContext _localctx = new SelectStmtContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_selectStmt);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(137);
			selectClause();
			setState(138);
			fromClause();
			setState(140);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==WHERE) {
				{
				setState(139);
				whereClause();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TruncateStmtContext extends ParserRuleContext {
		public TerminalNode TRUNCATE() { return getToken(SqlParser.TRUNCATE, 0); }
		public TerminalNode TABLE() { return getToken(SqlParser.TABLE, 0); }
		public IdExprContext idExpr() {
			return getRuleContext(IdExprContext.class,0);
		}
		public TruncateStmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_truncateStmt; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SqlParserListener ) ((SqlParserListener)listener).enterTruncateStmt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SqlParserListener ) ((SqlParserListener)listener).exitTruncateStmt(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SqlParserVisitor ) return ((SqlParserVisitor<? extends T>)visitor).visitTruncateStmt(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TruncateStmtContext truncateStmt() throws RecognitionException {
		TruncateStmtContext _localctx = new TruncateStmtContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_truncateStmt);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(142);
			match(TRUNCATE);
			setState(143);
			match(TABLE);
			setState(144);
			idExpr();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class UpdateStmtContext extends ParserRuleContext {
		public TerminalNode UPDATE() { return getToken(SqlParser.UPDATE, 0); }
		public IdExprContext idExpr() {
			return getRuleContext(IdExprContext.class,0);
		}
		public TerminalNode SET() { return getToken(SqlParser.SET, 0); }
		public List<SetExprContext> setExpr() {
			return getRuleContexts(SetExprContext.class);
		}
		public SetExprContext setExpr(int i) {
			return getRuleContext(SetExprContext.class,i);
		}
		public List<TerminalNode> COMMA() { return getTokens(SqlParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(SqlParser.COMMA, i);
		}
		public WhereClauseContext whereClause() {
			return getRuleContext(WhereClauseContext.class,0);
		}
		public UpdateStmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_updateStmt; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SqlParserListener ) ((SqlParserListener)listener).enterUpdateStmt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SqlParserListener ) ((SqlParserListener)listener).exitUpdateStmt(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SqlParserVisitor ) return ((SqlParserVisitor<? extends T>)visitor).visitUpdateStmt(this);
			else return visitor.visitChildren(this);
		}
	}
